# plutus-ephemeral-metadata-blueprints

./: README.md  plutus-scripts.cabal
app/: build-blueprint.hs
src/: Blueprints.hs
