Cabal-Version:      2.4
Name:               plutus-scripts
Version:            0.1.0.0
Author:             angel.castillo
Maintainer:         angel.castillob@protonmail.com
Build-Type:         Simple
Copyright:          © 2023 Angel Castillo
License:            Apache-2.0
License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Blueprints
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable build-blueprint
  hs-source-dirs:       app
  main-is:              build-blueprint.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:        aeson
                      , base ^>=4.14.1.0
                      , cardano-api
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-scripts
                      , hex
                      , bytestring 
